; ModuleID = '/home/carl/AnghaBench/freebsd/tools/test/testfloat/sparc64/extr_fpu_util.c_syst_float128_lt_quiet.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/test/testfloat/sparc64/extr_fpu_util.c_syst_float128_lt_quiet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@insn_float128_cmp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @syst_float128_lt_quiet(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @__fpu_setreg128(i32 0, i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @__fpu_setreg128(i32 4, i32 %8)
  %10 = call i32 @emul_trap(i32* @insn_float128_cmp, i32 0)
  %11 = call i32 asm sideeffect "mov 0,$0; movl %fcc0,1,$0", "=r,~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  ret i32 %12
}

declare dso_local i32 @__fpu_setreg128(i32, i32) #1

declare dso_local i32 @emul_trap(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 464}
